<?xml version="1.0"?>
<package>
  <name>sp_navigation</name>
  <version>0.0.0</version>
  <description>This package uses visual odometry to move a robot to a certain position.</description>
  <maintainer email="herrlauch@googlemail.com">Marcus Ebner von Eschenbach</maintainer>
  <license>MIT</license>
  <author email="herrlauch@googlemail.com">Marcus Ebner von Eschenbach</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend> 
  <build_depend>image_geometry</build_depend> 
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>PCL</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>

</package>
